Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-2293

[c] Proactor: Raw connection wakes can crash the application

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.32.0
    • proton-c-0.33.0
    • None
    • None

    Description

      If a raw connection receives a wake "at the same time" as it is disconnecting then the disconnect can be processed deleting the raw connection and the wake can still enter the epoll proactor scheduler wake queue. This will cause a crash when the wake is processed after the raw connection it belongs to is freed.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: