PROTON-2293: Stop raw connection wakes from crashing the application - Ensure that the raw connectino is not freed is there is a pending wake. - Ensure that a wake will not be delivered after the application closes   the raw connection. - Ensure that wake events will be delivered before disconnected events   if both are scheduled to happen.